--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,2 +1,15 @@
 
-<h1>projects -- coming soon ! </h1>
+<paper-shadow>
+<h1>Projects</h1>
+
+<div id="my-github-projects" />
+</paper-shadow>
+
+<script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
+<script src="/assets/git.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$(function() {
+		$("#my-github-projects").loadRepositories("venam");
+	});
+</script>
+
