blog to go back to home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 				<paper-tab name="cv">CV</paper-tab>
 				<paper-tab name="quotes">quotes</paper-tab>
 				-->
-				<paper-tab name="blog">Blog</paper-tab>
+				<paper-tab id="blog_tab" name="blog">Blog</paper-tab>
 				<paper-tab name="projects">Projects</paper-tab>
 				<!--
 				<paper-tab name="presentations">presentations</paper-tab>
