things to fill out

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,2 +1,17 @@
+<!--
+	It's hard talking about yourself all the time
+	It's not a fucking job interview
+	I'm not selling myself.
+	If I were I would be one of those really valuable item that cost so much
+	no one can afford it, but also no one knows why it has been assigned that
+	price. It's just the legendary **item**
+-->
+<paper-shadow>
+	<h1 class="page-heading">Patrick Louis</h1>
 
-<h1>about -- coming soon ! </h1>
+	<ul>
+		<li>Contact</li>
+		<li>CV</li>
+		<li>Online  Profiles</li>
+	</ul>
+</paper-shadow>
