--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
+<!--
+	I don't get why some weirdos have foot fetish
+	So yeah, feet aren't that turn on for me!
+	They are still very important, we put our full weight on them all day long
+	(minus fat Americans that use those minicar to move around)
+-->
 <footer class="site-footer">
 
   <div class="wrapper">
@@ -54,3 +60,6 @@
   </div>
 
 </footer>
+<!--
+	Thanks for checking me out but I'm not on that side of the fence...
+-->
