--- a/_includes/others.html
+++ b/_includes/others.html
@@ -1,2 +1,12 @@
-
-<h1>others -- coming soon ! </h1>
+<paper-shadow>
+	<h1 class="page-heading">Some Other things</h1>
+	<!-- I'm gonna fill those up soon...
+	 fill it like I filled your momma's belly
+	-->
+	<ul>
+		<li>poems</li>
+		<li>quotes</li>
+		<li>scrots</li>
+		<li>links</li>
+	</ul>
+</paper-shadow>
