--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
+<!-- Jekyll kicks asses, you should try it
+	Ruby is cool too, totally crazy language
+-->
 
+<!--
+	Here comes the head
+	prepare yourself
+-->
   {% include head.html %}
+<!--
+	Nah, it's not the best head I've ever received.
+	!! Nasty Ψ(｀▽´)Ψ !!
+-->
 
+<!--
+	They say girls sometime have problems with their appearances
+	I guess that's what we can refer to as "body unresolved"
+-->
   <body unresolved>
 
+	<!--
+	 eye down on your paper chief!
+	-->
 	<core-header-panel >
     {% include header.html %}
 
 	
+	<!--
+	 For the plant of the subject (not meat 'cause I'm vegetarian)
+	-->
 	<div class="page-content">
 		<div class="wrapper">
 			<div class="content" id="blog-content">
@@ -17,11 +38,11 @@
 			<div class="content" id="about-content">
 				{% include about.html %}
 			</div>
-			<div class="content" id="projects-content">
-				{% include projects.html %}
-			</div>
 			<div class="content" id="others-content">
 				{% include others.html %}
+			</div>
+			<div class="content" id="projects-content">
+				{% include projects.html %}
 			</div>
 		</div>
 	</div>
@@ -29,6 +50,9 @@
     {% include footer.html %}
 	</core-header-panel >
 	
+	<!--
+	 the stupidest js script ever
+	-->
 	<script>
 var blog_content = document.getElementById("blog-content");
 var about_content = document.getElementById("about-content");
