--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
 			Girls dig that font (eyes problem maybe).
 		-->
 		<div class="wrapper">
-			<h2> <a href="{{ site.url }}" id="blog_title">Venam's Blog</a></h2>
+			<h2> <a href="{{ site.url }}{{site.baseurl}}" id="blog_title">{{site.title}}</a></h2>
 		</div>
 
 
