--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -31,7 +31,7 @@
 This loads all my shitty stuff from GH
 -->
 <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
-<script src="/assets/git.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/git.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$(function() {
 		$("#my-github-projects").loadRepositories("venam");
