added about sectiona and updated project section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,8 +10,87 @@
 	<h1 class="page-heading">Patrick Louis</h1>
 
 	<ul>
-		<li>Contact</li>
-		<li>CV</li>
-		<li>Online  Profiles</li>
+		<li>
+			Contact
+			<ul>
+				<li>Patrick Louis</li>
+				<li>
+					patrick at iotek dot org
+					<ul>
+						<li>PGP: C99E 0E69 008E 88F4 4529  1D87 8595 438B 27D1 0933 [@iotek.org]</li>
+						<li>Key:<a href="/pubkey.txt">4096R/27D10933 2014-01-03 [@iotek.org]</a></li>
+					</ul>
+				</li>
+				<li>
+					patrick.g.louis at usek.edu.lb
+					<ul>
+					<li>PGP: 7D46 4DAC A5A3 AD7F 58EE  3425 1547 F98B 2E7E 8F41 [@net.usek.edu.lb]</li>
+					<li>Key:<a href="/pubkey2.txt">4096R/2E7E8F41 2013-08-09 [@net.usek.edu.lb]</a></li>
+					</ul>
+				</li>
+				<li>IRC: irc.nixers.net #nixers</li>
+				<li>Mumble: Every Sunday 7pm-8pm UTC+3 (z3bra.org:64738)</li>
+				<li>Telegram: @venam</li>
+			</ul>
+		</li>
+		<li><a href="http://venam.nixers.net/CV.pdf">Résumé</a>
+		</li>
+		<li>
+			Online  Profiles &amp; Affiliations
+			<ul>
+				<li>
+					Nixers (administrator)
+					<a href="http://nixers.net/member.php?action=profile&uid=80">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+				<li>
+					IOTEK
+					<a href="http://iotek.org">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+				<li>
+					Unixporn
+					<a href="http://unixporn.net">
+					&nbsp;&raquo;&raquo;
+					</a>
+					</li>
+				<li>
+					deviantart
+					<a href="http://venamresm.deviantart.com/">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+				<li>
+					joindiaspora
+					<a href="https://joindiaspora.com/u/venam">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+				<li>
+					dotshare
+					<a href="http://dotshare.it/~venam/">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+				<li>
+					SubtlePatterns(Venam)
+					<a href="http://subtlepatterns.com/moulin/">
+					&nbsp;&raquo;&raquo;
+					</a>
+				</li>
+			</ul>
+		</li>
 	</ul>
+	<paper-shadow>
+		-----BEGIN <a href="http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----<br/>
+		Version: 3.1<br/>
+		GCS/P/SS d+ s: a-- C++$<br/>
+		LB+++(++++) P+++>+++++ @L++++ !E W+++ N? o? <br/>
+		K? w- O? M- V? PS++ PE-(--) Y++(+++) <br/>
+		PGP++>+++ !t 5? X++ R+ tv-- b++ DI? D+ G>++  <br/>
+		e++ h r- z++  <br/>
+		------END GEEK CODE BLOCK------  <br/>
+	</paper-shadow>
 </paper-shadow>
