--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,5 +1,6 @@
-
 <paper-shadow>
+
+
 	<!--
 	 Those presentations were loads of fun to make
 	-->
@@ -18,6 +19,39 @@
 			Slides for a marketing project made about Beirut Beer
 		</dd>
 	</paper-shadow>
+
+	<!--
+	Some projects that you can directly load
+	Not everyone want to look at my GH code
+	-->
+	<h1 class="page-heading">Hosted Projects (Also on GH)</h1>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		<a class="post-link" href="http://venam.nixers.net/gravity_guy">Gravity Guy</a></li>
+		<dd style="padding:1ex;">
+			A stupid game where you control gravity to fight aliens
+		</dd>
+	</paper-shadow>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		<a class="post-link" href="http://venam.nixers.net/potato/">Potato Rage</a></li>
+		<dd style="padding:1ex;">
+			A stupid game where you but potatoes and hit cocroaches
+		</dd>
+	</paper-shadow>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		<a class="post-link" href="http://venam.nixers.net/unicoder.apk">Unicoder</a></li>
+		<dd style="padding:1ex;">
+			A stupid Android app where you convert text to special unicode forms
+		</dd>
+	</paper-shadow>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		<a class="post-link" href="http://venam.nixers.net/emoji.apk">Emoji</a></li>
+		<dd style="padding:1ex;">
+			A stupid Android app where you copy japanese emoji
+		</dd>
+	</paper-shadow>
+
+
+
 	<h1 class="page-heading">Projects</h1>
 
 	<!--
