--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,81 +9,74 @@
 <paper-shadow>
 	<h1 class="page-heading">Patrick Louis</h1>
 
-	<ul>
-		<li>
-			Contact
-			<ul>
-				<li>Patrick Louis</li>
-				<li>
-					patrick at iotek dot org
-					<ul>
-						<li>PGP: C99E 0E69 008E 88F4 4529  1D87 8595 438B 27D1 0933 [@iotek.org]</li>
-						<li>Key:<a href="/pubkey.txt">4096R/27D10933 2014-01-03 [@iotek.org]</a></li>
-					</ul>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		Contact
+		<ul>
+			<li>
+				patrick at iotek dot org
+				<ul>
+					<li>PGP: C99E 0E69 008E 88F4 4529  1D87 8595 438B 27D1 0933 [@iotek.org]</li>
+					<li>Key:<a href="/pubkey.txt">4096R/27D10933 2014-01-03 [@iotek.org]</a></li>
+				</ul>
+			</li>
+
+			<li>
+				patrick.g.louis at usek.edu.lb
+				<ul>
+				<li>PGP: 7D46 4DAC A5A3 AD7F 58EE  3425 1547 F98B 2E7E 8F41 [@net.usek.edu.lb]</li>
+				<li>Key:<a href="/pubkey2.txt">4096R/2E7E8F41 2013-08-09 [@net.usek.edu.lb]</a></li>
+				</ul>
+			</li>
+			<li>IRC: irc.nixers.net #nixers</li>
+			<li>Mumble: Every Sunday 7pm-8pm UTC+3 (z3bra.org:64738)</li>
+			<li>Telegram: @venam</li>
+		</ul>
+	</paper-shadow>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		<a href="http://venam.nixers.net/CV.pdf">Résumé</a>
+	</paper-shadow>
+	<paper-shadow style="margin-bottom:3ex !important;">
+		Online  Profiles &amp; Affiliations
+		<ul>
+			<li>
+				<a href="http://nixers.net/member.php?action=profile&uid=80">
+				Nixers
+				</a> (administrator)
+			</li>
+			<li>
+				<a href="http://iotek.org">
+				IOTEK
+				</a>
+			</li>
+			<li>
+				<a href="http://unixporn.net">
+				Unixporn
+				</a>
 				</li>
-				<li>
-					patrick.g.louis at usek.edu.lb
-					<ul>
-					<li>PGP: 7D46 4DAC A5A3 AD7F 58EE  3425 1547 F98B 2E7E 8F41 [@net.usek.edu.lb]</li>
-					<li>Key:<a href="/pubkey2.txt">4096R/2E7E8F41 2013-08-09 [@net.usek.edu.lb]</a></li>
-					</ul>
-				</li>
-				<li>IRC: irc.nixers.net #nixers</li>
-				<li>Mumble: Every Sunday 7pm-8pm UTC+3 (z3bra.org:64738)</li>
-				<li>Telegram: @venam</li>
-			</ul>
-		</li>
-		<li><a href="http://venam.nixers.net/CV.pdf">Résumé</a>
-		</li>
-		<li>
-			Online  Profiles &amp; Affiliations
-			<ul>
-				<li>
-					Nixers (administrator)
-					<a href="http://nixers.net/member.php?action=profile&uid=80">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-				<li>
-					IOTEK
-					<a href="http://iotek.org">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-				<li>
-					Unixporn
-					<a href="http://unixporn.net">
-					&nbsp;&raquo;&raquo;
-					</a>
-					</li>
-				<li>
-					deviantart
-					<a href="http://venamresm.deviantart.com/">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-				<li>
-					joindiaspora
-					<a href="https://joindiaspora.com/u/venam">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-				<li>
-					dotshare
-					<a href="http://dotshare.it/~venam/">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-				<li>
-					SubtlePatterns(Venam)
-					<a href="http://subtlepatterns.com/moulin/">
-					&nbsp;&raquo;&raquo;
-					</a>
-				</li>
-			</ul>
-		</li>
-	</ul>
-	<paper-shadow>
+			<li>
+				<a href="http://venamresm.deviantart.com/">
+				deviantart
+				</a>
+			</li>
+			<li>
+				<a href="https://joindiaspora.com/u/venam">
+				joindiaspora
+				</a>
+			</li>
+			<li>
+				<a href="http://dotshare.it/~venam/">
+				dotshare
+				</a>
+			</li>
+			<li>
+				<a href="http://subtlepatterns.com/moulin/">
+				SubtlePatterns
+				</a> (Venam)
+			</li>
+		</ul>
+	</paper-shadow>
+
+	<paper-shadow style="margin-bottom:3ex !important;">
 		-----BEGIN <a href="http://www.geekcode.com/geek.html">GEEK CODE</a> BLOCK-----<br/>
 		Version: 3.1<br/>
 		GCS/P/SS d+ s: a-- C++$<br/>
@@ -92,5 +85,42 @@
 		PGP++>+++ !t 5? X++ R+ tv-- b++ DI? D+ G>++  <br/>
 		e++ h r- z++  <br/>
 		------END GEEK CODE BLOCK------  <br/>
+	</paper-shadow>
+
+	<paper-shadow style="margin-bottom:3ex !important;">
+		Friends
+		<ul>
+			<li><a href="http://saveosx.org/">yrmt</a></li>
+			<li><a href="https://github.com/b4dtR1p">b4dtR1p</a></li>
+			<li><a href="http://xero.nu/">xero</a></li>
+			<li><a href="http://z3bra.org/">z3bra</a></li>
+			<li><a href="http://unixmafia.deviantart.com/">Mafia</a></li>
+			<li><a href="http://joseph-elkhoury.site90.net/">joseph El Khoury</a></li>
+			<li><a href="http://kaashif.co.uk/">Kaashif Hymabaccus (pizzaroll)</a></li>
+			<li><a href="https://github.com/dami0">dami</a></li>
+			<li><a href="https://twitter.com/chc40">chc4</a></li>
+			<li><a href="http://greduan.com/">greduan</a></li>
+			<li><a href="https://github.com/vhakulinen">vompatti</a></li>
+			<li><a href="https://github.com/libbro">libbro</a></li>
+			<li><a href="https://unixporn.net/">jmbi</a></li>
+			<li><a href="https://github.com/dtch-">dtch</a></li>
+			<li><a href="http://neeasade.net/">neeasade</a></li>
+			<li><a href="https://sulami.github.io/">sulami</a></li>
+			<li><a href="http://eyenx.ch/">eyenx</a></li>
+			<li><a href="https://github.com/hadenodom">dbcooper</a></li>
+			<li><a href="http://dcat.iotek.org/">dcat</a></li>
+			<li><a href="http://cmacr.ae/">phyrne</a></li>
+			<li><a href="https://github.com/kirbyUK">kirby</a></li>
+			<li><a href="http://nonsingular.net/">saeidw</a></li>
+			<li><a href="https://github.com/Namirabboud">Namirabboud</a></li>
+			<li><a href="http://chaficn.com/">chafic</a></li>
+			<li><a href="https://kopri.org/">kirby</a></li>
+			<li><a href="http://scarycode.com/">obeid</a></li>
+			<li><a href="http://bugsofberk.net/">berkoz</a></li>
+			<li><a href="http://crshd.github.io/">crshd</a></li>
+			<li><a href="http://c0de.in/">jolia</a></li>
+			<li><a href="https://github.com/elementalK">Bruno</a></li>
+			<li><a href="http://hiler.pl/">ivyl</a></li>
+		</ul>
 	</paper-shadow>
 </paper-shadow>
