--- a/_includes/about.html
+++ b/_includes/about.html
@@ -121,6 +121,7 @@
 			<li><a href="http://c0de.in/">jolia</a></li>
 			<li><a href="https://github.com/elementalK">Bruno</a></li>
 			<li><a href="http://hiler.pl/">ivyl</a></li>
+			<li><a href="http://www.mort.coffee/">mort</a></li>
 		</ul>
 	</paper-shadow>
 </paper-shadow>
