--- a/css/material.css
+++ b/css/material.css
@@ -23,4 +23,12 @@ pre {
 	transition: display 1.0s ease;
 	transition: all 0.5s ease-out;
 }
-
+.hidden {
+	display: none;
+}
+.clickable {
+	color: #2A7AE2;
+	text-decoration: none;
+	font-weight: 300;
+	cursor: pointer;
+}
