missed some friend and dead links

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -69,7 +69,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="http://subtlepatterns.com/moulin/">
+				<a href="http://subtlepatterns.com/?s=venam">
 				SubtlePatterns
 				</a> (Venam)
 			</li>
@@ -90,8 +90,12 @@
 	<paper-shadow style="margin-bottom:3ex !important;">
 		Friends
 		<ul>
-			<li><a href="http://saveosx.org/">yrmt</a></li>
 			<li><a href="https://github.com/b4dtR1p">b4dtR1p</a></li>
+			<li><a href="http://saveosx.org/">yrmt</a></li>
+			<li><a href="http://elliottpardee.me/">vypr</a></li>
+			<li><a href="http://www.tech-thoughts-blog.com/">rahmu</a></li>
+			<li><a href="http://thecodeship.com/">ayman</a></li>
+			<li><a href="http://aboumrad.info/">xterm</a></li>
 			<li><a href="http://xero.nu/">xero</a></li>
 			<li><a href="http://z3bra.org/">z3bra</a></li>
 			<li><a href="http://unixmafia.deviantart.com/">Mafia</a></li>
