--- a/_includes/head.html
+++ b/_includes/head.html
@@ -122,5 +122,20 @@
 			width: 500px;
 		}
 	}
+	a .artImage {
+		text-align: center;
+	}
+	.artImage {
+		display: inline-block;
+		box-shadow: 2ex 2ex #303030;
+		border-radius: 0.5em;
+		max-width: 16em;
+		max-height: 16em;
+		margin-bottom: 2em;
+		margin-right: 2em;
+	}
+	#disqus_thread {
+		padding-top: 2ex;
+	}
 	</style>
 </head>
