--- a/_includes/others.html
+++ b/_includes/others.html
@@ -44,6 +44,17 @@
 			</div>
 		</li>
 		<li>
+			<span  class="clickable" onClick="showOther('arts')" href="">arts</span>
+			<div id="other_arts"   class="hidden">
+				<ul>
+					<li>
+						find some of my arts 
+						<a href="{{site.baseurl}}/arts.html" >here</a>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li>
 			<span class="clickable" onClick="showOther('scrots')" href="">scrots</span>
 			<div id="other_scrots"  class="hidden">
 				TODO
