--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -48,6 +48,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art12.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art13.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art13.jpg"></img>
+	</a>
+
 
 
 	<div id="disqus_thread"></div>
