--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -53,6 +53,26 @@
 	</a>
 
 
+	<a href="{{site.baseurl}}/assets/arts/art14.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art14.jpg"></img>
+	</a>
+
+	<a href="{{site.baseurl}}/assets/arts/art15.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art15.jpg"></img>
+	</a>
+
+
+	<a href="{{site.baseurl}}/assets/arts/art16.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art16.jpg"></img>
+	</a>
+
+
+	<a href="{{site.baseurl}}/assets/arts/art17.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art17.jpg"></img>
+	</a>
+
+
+
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
