--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -52,7 +52,6 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art13.jpg"></img>
 	</a>
 
-
 	<a href="{{site.baseurl}}/assets/arts/art14.jpg">
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art14.jpg"></img>
 	</a>
@@ -61,17 +60,29 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art15.jpg"></img>
 	</a>
 
-
 	<a href="{{site.baseurl}}/assets/arts/art16.jpg">
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art16.jpg"></img>
 	</a>
-
 
 	<a href="{{site.baseurl}}/assets/arts/art17.jpg">
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art17.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art18.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art18.jpg"></img>
+	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art19.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art19.jpg"></img>
+	</a>
+
+	<a href="{{site.baseurl}}/assets/arts/art20.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art20.jpg"></img>
+	</a>
+
+	<a href="{{site.baseurl}}/assets/arts/art21.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art21.jpg"></img>
+	</a>
 
 
 	<div id="disqus_thread"></div>
