--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -84,6 +84,9 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art21.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art22.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art22.jpg"></img>
+	</a>
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
