--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -88,6 +88,11 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art22.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art23.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art23.jpg"></img>
+	</a>
+
+
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
 /* * * CONFIGURATION VARIABLES * * */
