--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -96,6 +96,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art24.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art25.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art25.jpg"></img>
+	</a>
+
 
 
 	<div id="disqus_thread"></div>
