--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -108,6 +108,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art27.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art28.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art28.jpg"></img>
+	</a>
+
 
 
 	<div id="disqus_thread"></div>
