--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -112,6 +112,13 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art28.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art29.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art29.jpg"></img>
+	</a>
+
+	<a href="{{site.baseurl}}/assets/arts/art30.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art30.jpg"></img>
+	</a>
 
 
 	<div id="disqus_thread"></div>
