--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -124,6 +124,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art31.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art32.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art32.jpg"></img>
+	</a>
+
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
