--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -128,6 +128,15 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art32.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art33.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art33.jpg"></img>
+	</a>
+
+	<a href="{{site.baseurl}}/assets/arts/art34.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art34.jpg"></img>
+	</a>
+
+
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
