--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -136,6 +136,9 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art34.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art_new_animation.gif">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art_new_animation.gif"></img>
+	</a>
 
 
 	<div id="disqus_thread"></div>
