--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -140,6 +140,11 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art_new_animation.gif"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art35.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art35.jpg"></img>
+	</a>
+
+
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
