--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -144,6 +144,11 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art35.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art36.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art36.jpg"></img>
+	</a>
+
+
 
 
 	<div id="disqus_thread"></div>
