--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -148,6 +148,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art36.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art37.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art37.jpg"></img>
+	</a>
+
 
 
 
