--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -152,6 +152,11 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art37.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art38.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art38.jpg"></img>
+	</a>
+
+
 
 
 
