--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -156,6 +156,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art38.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art39.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art39.jpg"></img>
+	</a>
+
 
 
 
