--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -160,7 +160,9 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art39.jpg"></img>
 	</a>
 
-
+	<a href="{{site.baseurl}}/assets/arts/art40.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art40.jpg"></img>
+	</a>
 
 
 
