--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -164,6 +164,10 @@
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art40.jpg"></img>
 	</a>
 
+	<a href="{{site.baseurl}}/assets/arts/art41.jpg">
+		<img class="artImage" src="{{site.baseurl}}/assets/arts/art41.jpg"></img>
+	</a>
+
 
 
 	<div id="disqus_thread"></div>
