well, since I'm following a naming convention anyway

--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -1,174 +1,14 @@
 <article class="post-content">
 
-	<a href="{{site.baseurl}}/assets/arts/art1.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art1.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art2.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art2.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art3.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art3.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art4.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art4.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art5.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art5.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art6.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art6.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art7.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art7.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art8.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art8.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art9.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art9.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art10.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art10.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art11.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art11.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art12.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art12.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art13.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art13.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art14.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art14.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art15.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art15.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art16.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art16.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art17.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art17.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art18.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art18.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art19.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art19.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art20.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art20.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art21.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art21.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art22.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art22.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art23.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art23.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art24.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art24.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art25.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art25.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art26.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art26.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art27.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art27.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art28.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art28.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art29.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art29.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art30.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art30.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art31.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art31.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art32.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art32.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art33.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art33.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art34.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art34.jpg"></img>
-	</a>
+	{% for i in (1..41) %}
+			<a href="{{site.baseurl}}/assets/arts/art{{ i }}.jpg">
+				<img class="artImage" src="{{site.baseurl}}/assets/arts/art{{ i }}.jpg"></img>
+		</a>
+	{% endfor %}
 
 	<a href="{{site.baseurl}}/assets/arts/art_new_animation.gif">
 		<img class="artImage" src="{{site.baseurl}}/assets/arts/art_new_animation.gif"></img>
 	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art35.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art35.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art36.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art36.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art37.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art37.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art38.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art38.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art39.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art39.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art40.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art40.jpg"></img>
-	</a>
-
-	<a href="{{site.baseurl}}/assets/arts/art41.jpg">
-		<img class="artImage" src="{{site.baseurl}}/assets/arts/art41.jpg"></img>
-	</a>
-
-
 
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
