--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -66,7 +66,7 @@ This loads all my shitty stuff from GH
 -->
 <script src="http://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/git.js" type="text/javascript"></script>
-<script type="text/javascript">
+<script type="text/javascript" async="async" data-turbolinks-track="true">
 	$(function() {
 		$("#my-github-projects").loadRepositories("venam");
 	});
