--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,6 +125,13 @@
 	a .artImage {
 		text-align: center;
 	}
+	.foodImage {
+		display: inline-block;
+		max-width: 16em;
+		max-height: 16em;
+		margin-bottom: 2em;
+		margin-right: 2em;
+	}
 	.artImage {
 		display: inline-block;
 		box-shadow: 2ex 2ex #303030;
