--- a/_includes/others.html
+++ b/_includes/others.html
@@ -5,6 +5,29 @@
 	-->
 	<ul>
 		<li>
+			<span  class="clickable" onClick="showOther('arts')" href="">arts</span>
+			<div id="other_arts"   class="hidden">
+				<ul>
+					<li>
+						find some of my arts 
+						<a href="{{site.baseurl}}/arts.html" >here</a>
+					</li>
+				</ul>
+			</div>
+		</li>
+		<li>
+			<span  class="clickable" onClick="showOther('cooking')" href="">Cooking</span>
+			<div id="other_cooking"   class="hidden">
+				<ul>
+					<li>
+						Checkout a page about my cooking skills.
+						<a href="{{site.baseurl}}/food.html" >here</a>
+					</li>
+				</ul>
+			</div>
+		</li>
+
+		<li>
 			<span class="clickable" onClick="showOther('poems')" href="">poems</span>
 			<div id="other_poems"   class="hidden">
 				<ul>
@@ -39,17 +62,6 @@
 				<ul>
 					<li>
 						<a href="http://venam.nixers.net/quotes.txt" target="_blank">quotes</a>
-					</li>
-				</ul>
-			</div>
-		</li>
-		<li>
-			<span  class="clickable" onClick="showOther('arts')" href="">arts</span>
-			<div id="other_arts"   class="hidden">
-				<ul>
-					<li>
-						find some of my arts 
-						<a href="{{site.baseurl}}/arts.html" >here</a>
 					</li>
 				</ul>
 			</div>
