--- a/_includes/recipe_template.html
+++ b/_includes/recipe_template.html
@@ -1,7 +1,7 @@
 <div class="recipe">
 	<fieldset class="recipe_fieldset">
 		<legend> {{include.name}} </legend>
-		<a href="{{site.baseurl}}/assets/recipes/recipe{{include.img}}.jpg"><img class="foodImage recipe_image" src="{{site.baseurl}}/assets/recipes/recipe{{include.img}}.jpg"></img></a>
+		<a href="{{site.baseurl}}/assets/recipes/recipe{{include.img}}.jpg"><img class="recipe_image" src="{{site.baseurl}}/assets/recipes/recipe{{include.img}}.jpg"></img></a>
 		<div class="recipe_description">
 			{{include.description}}
 		</div>
