--- a/_includes/about.html
+++ b/_includes/about.html
@@ -27,8 +27,8 @@
 				<li>Key:<a href="/pubkey2.txt">4096R/2E7E8F41 2013-08-09 [@net.usek.edu.lb]</a></li>
 				</ul>
 			</li>
-			<li>IRC: irc.nixers.net #nixers</li>
-			<li>Mumble: Every Sunday 7pm-8pm UTC+3 (z3bra.org:64738)</li>
+			<li>IRC: irc.nixers.net or irc.iotek.org or unix.chat #nixers</li>
+			<li>Mumble: Every Sunday 7pm-8pm UTC+3 (chat.z3bra.org:64738)</li>
 			<li>Telegram: @venam</li>
 		</ul>
 	</paper-shadow>
@@ -91,6 +91,8 @@
 		Friends
 		<ul>
 			<li><a href="https://github.com/b4dtR1p">b4dtR1p</a></li>
+			<li><a href="https://www.youtube.com/channel/UCS4dsIMOKXAfPlgCTt4QOvQ">Oday Maleh</a></li>
+			<li><a href="http://stateofmind13.com/">Elie Fares</a></li>
 			<li><a href="http://saveosx.org/">yrmt</a></li>
 			<li><a href="http://elliottpardee.me/">vypr</a></li>
 			<li><a href="http://www.tech-thoughts-blog.com/">rahmu</a></li>
