changes and added recipes

--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -4,3 +4,46 @@
 
 {% include recipe_template.html name="Pancakes" img="2" description="There's not much to say about pancakes. They're fluffy, smooshy, and so good with mapple syrup straight from Canada. There's also a cheese cake in that picture." %}
 
+{% include recipe_template.html name="Cold Pasta With Vegetables And Cheese" img="3" description="A very refreshing and simple meal. I try to avoid complicated recipe and prefer raw ingredients." %}
+
+{% include recipe_template.html name="Wild Omelette" img="4" description="An omelette with tomatoes, radish, chedar, sweet potatoes, onions, sparkled with persil, and accompanied by peanuts." %}
+
+{% include recipe_template.html name="Rice And Beans" img="5" description="As a vegetarian beans are my main source of protein. There are multiple ways to prepare them. In winter a warm rice with beans keeps your body in shape." %}
+
+{% include recipe_template.html name="Spaghetti With Red Sauce" img="6" description="That sauce has so much flavors. After caramelizing the onions and browning the garlic, I leave the carrot with spicies so that they become savorous." %}
+
+{% include recipe_template.html name="Spaghetti With White Bechamel Sauce" img="7" description="Just a simple bechamel sauce." %}
+
+{% include recipe_template.html name="Vegetable a-la-plancha" img="8" description="Last summer my father set that place outside to cook on a sheet of metal over a wood fire. This changes the tastes of your usual diner." %}
+
+{% include recipe_template.html name="Rice With Lentils And Carrots" img="9" description="Very high in carotene, fiber, iron, and other good vitamins." %}
+
+{% include recipe_template.html name="Vegetarian Pate" img="10" description="It's a vegetarian pate and not a vegetarian burger! The naming convention aside, this recipe was popular with my brothers and sisters." %}
+
+{% include recipe_template.html name="Sweet Potato chili" img="11" description="I don't remember if it was chili and spicy but I do remember it tasted like heaven." %}
+
+{% include recipe_template.html name="Potatoes On Fire" img="12" description="Just plain potatoes." %}
+
+{% include recipe_template.html name="Crepes" img="13" description="" %}
+
+{% include recipe_template.html name="Walnuts" img="14" description="Fresh walnuts from my father's wife family garden" %}
+
+{% include recipe_template.html name="Ramen Noodles With Assortments" img="15" description="Noodles need to have vegetables around them. In this recipe I used boiled eggs, mushroom, walknuts, corn, small totators, chickpeas, and cheese." %}
+
+{% include recipe_template.html name="Couscous With Potatoes And Beans" img="17" description="Couscous is an exotic and interesting replacement for rice. Not everyone like its taste but I do." %}
+
+{% include recipe_template.html name="French Fries" img="18" description="Fast food...what can I say!" %}
+
+{% include recipe_template.html name="Garganelli With Fresh Tomato And Basil" img="19" description="This was better than expected. The special technique of the recipe is to remove the seeds of the tomatoes and let them marinate with the basil and garlic for two hours." %}
+
+{% include recipe_template.html name="Falafel" img="20" description="Homemade falafel" %}
+
+{% include recipe_template.html name="Grilled Cheddar Sandwiches" img="21" description="Cheddar sandwiches grilled in the oven with tomatoes and olives." %}
+
+{% include recipe_template.html name="Potato Ratatouille" img="22" description="Vegetables brought to such a high temperature they melted with the potatoes." %}
+
+{% include recipe_template.html name="Wild Salad With Fresh Hommous" img="24" description="Grape leaves, lemon, tomatoes, lettuce, spices." %}
+
+{% include recipe_template.html name="Wild Omelette II" img="25" description="A spicy and wild omelette." %}
+
+{% include recipe_template.html name="Eggplants With Sauce And Rice" img="26" description="You melt the onions, add the eggplant slices. Let them fry a bit. Then you pour the sauce and let it boil down. The sauce is made of tomatoes, basil, spices, and mushrooms. All is served on a sticky white rice." %}
