--- a/_includes/all_arts.html
+++ b/_includes/all_arts.html
@@ -2,7 +2,7 @@
 
 	{% for i in (1..44) %}
 			<a href="{{site.baseurl}}/assets/arts/art{{ i }}.jpg">
-				<img class="artImage" src="{{site.baseurl}}/assets/arts/art{{ i }}.jpg"></img>
+				<img class="artImage" src="{{site.baseurl}}/assets/arts/small/art{{ i }}.jpg"></img>
 		</a>
 	{% endfor %}
 
