--- a/_includes/header_food.html
+++ b/_includes/header_food.html
@@ -3,7 +3,7 @@
 -->
 <div class="page-content">
 	<div class="fancy_header_color">
-		<a href="{{ site.url }}{{site.baseurl}}" id="blog_title">&lt;</a>
+		<a href="{{ site.url }}{{site.baseurl}}" id="blog_title">Back</a>
 	</div>
 	<div class="wrapper top_header">
 		<div id="cooking_title">Venam's Cooking</div>
