--- a/_includes/food_head.html
+++ b/_includes/food_head.html
@@ -17,12 +17,178 @@
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 	<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="{{ "/css/food.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 	<!--
-	 Some overriding styles
-	 so fashionable you'll feel like a fucking neck-beard when comparing
-	 yourself to it
+	 why not inline styles
 	-->
+	<style>
+html,body {
+	margin: 0px auto;
+	color: #303030;
+	background-color: #FFF;
+	font-family: Arial;
+	font-size: 1.15em;
+	height: 100%;
+}
+
+.fancy_header_color {
+	background: transparent linear-gradient(rgba(0, 0, 0, 0.5), rgb(255, 255, 255) 75%) repeat scroll 0% 0%;
+	height: 3em;
+	background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgb(255, 255, 255) 75%); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgb(255, 255, 255) 75%); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgb(255, 255, 255) 75%); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgb(255, 255, 255) 75%); /* Standard syntax */
+}
+
+.top_header {
+	height: 0.5em;
+}
+
+.fancy_header_bottom {
+	height: 1px;
+	background-color: #000;
+	box-shadow: 2px 2px 10px #A0A0A0;
+	margin-top: 0px;
+	top: 3em;
+}
+
+
+.wrapper {
+	margin: 0px auto;
+	width: 70%;
+}
+
+#blog_title {
+	text-decoration: none;
+	color: #555555;
+	padding-right: 2em;
+	float: right;
+	padding-top: 0.5em;
+	font-size: 0.9em;
+	font-family: monospace;
+}
+
+#cooking_title {
+	text-align: center;
+	position: relative;
+	font-family: Arimo, Arial, sans-serif;
+	font-size: 1.6em;
+	font-style: none;
+	font-weight: thin;
+	margin-top: 0.4em;
+	color: #303030 !important;
+	text-decoration:none;
+	-webkit-transition: color 0.5s;
+	transition: color 0.5s;
+	margin-top: 1.0em;
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	bottom: 0.6em;
+}
+
+#attempt {
+	position: relative;
+	font-size: 0.6em;
+	bottom: 6.0em;
+	text-align: center;
+}
+
+#cooking_title:hover {
+	color: #000;
+}
+.container {
+	width: 90%;
+	margin: 50px auto;
+}
+a .artImage {
+	text-align: center;
+}
+.foodImage {
+}
+#disqus_thread {
+	padding-top: 2ex;
+}
+
+header {
+	margin-top: 4em;
+	text-align: center;
+	margin-bottom: 4em;
+}
+.post-header {
+	font-family: arial;
+	font-size: 11pt;
+}
+
+.recipe_fieldset {
+	margin-bottom: 2em;
+	border-radius: 4px 4px 4px;
+	border-color: #A0A0A0;
+	padding: 1em;
+}
+.recipe_image, .recipe_description {
+	display: inline-block;
+	vertical-align: middle;
+	horizontal-align: middle;
+}
+.recipe_image {
+	margin-left: 2em;
+	position: relative;
+	display: inline-block;
+	max-width: 16em;
+	max-height: 16em;
+	margin-bottom: 2em;
+	margin-right: 2em;
+
+}
+.recipe_description {
+	font-family: Arial;
+	font-size: 11pt;
+	max-width: 25em;
+	word-wrap: break-word;
+	text-align: justify;
+	padding: 1em;
+}
+footer {
+	font-size: 11pt;
+	padding-bottom: 1em;
+}
+.footer-col a {
+	float: right;
+}
+
+@media (max-width: 1130px) {
+	.recipe_fieldset {
+		text-align: center;
+	}
+}
+
+
+@media (max-width: 655px) {
+	.wrapper {
+		width: 95%;
+	}
+	.recipe_image {
+		max-width: 14em;
+		max-height: 14em;
+	}
+}
+@media (max-width: 480px) {
+	.recipe_description {
+		max-width: 18em;
+		padding: 1ex;
+	}
+	.recipe_image {
+		margin-left: 0.5ex;
+		margin-right: 0.5ex;
+		max-width: 12.5em;
+		max-height: 12.5em;
+	}
+	.recipe_fieldset {
+		padding: 1ex;
+	}
+
+}
+	</style>
+
 </head>
