--- a/_includes/head.html
+++ b/_includes/head.html
@@ -136,8 +136,8 @@
 		display: inline-block;
 		box-shadow: 2ex 2ex #303030;
 		border-radius: 0.5em;
-		max-width: 16em;
-		max-height: 16em;
+		max-width: 300px;
+		max-height: 300px;
 		margin-bottom: 2em;
 		margin-right: 2em;
 	}
